# osd-text

./: .clang-format  CMakeLists.txt
src/: main.cpp  text.cpp  text.h
